GPC/tests/examples/fail/wrongConstructor.gpc

GPRM::Kernel::Test test;
test = GPRM::Kernel::Test::Wrong();
